# retrieval-kit

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: publish.yml
src/: chunking.rs  embeddings.rs  lib.rs  node.rs
src/backends/: lancedb.rs
test/: smoke.cjs
